--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -1,37 +1,57 @@
 @charset "utf-8";
 
 .edit-task {
-  width: 1000px;
+  max-width: 600px;
   margin: 0 auto;
-}
+  padding: 20px;
 
-.edit-task-form {
-  color: #555555;
-}
+  .form-group {
+    margin-bottom: 20px;
 
-.edit-task-title,
-.edit-task-detail {
-  width: 300px;
-  margin-bottom: 25px;
-}
+    label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
 
-.delete-task-button {
-  color: #ff3333;
-  border: solid 1px #ff3333;
-  width: 80px;
-  height: 40px;
-  margin: 25px 5px;
-  border-radius: 5px;
-}
+    .form-control {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+  }
 
-.edit-task-button {
-  background-color: #242f9b;
-  color: #ffffff;
-  width: 80px;
-  height: 40px;
-  border-radius: 5px;
-}
+  .status-group {
+    display: flex;
+    align-items: center;
 
-.error-message {
-  color: #ff3333;
+    label {
+      margin-left: 5px;
+      margin-right: 15px;
+    }
+  }
+
+  .button-group {
+    display: flex;
+    justify-content: space-between; /* 左右に配置 */
+    margin-top: 20px;
+
+    .btn {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+
+      &.btn-primary {
+        background-color: #007bff;
+        color: #fff;
+      }
+
+      &.btn-danger {
+        background-color: #dc3545;
+        color: #fff;
+      }
+    }
+  }
 }
