--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -14,26 +14,32 @@
 }
 
 .list-tab {
-  list-style: none;
   display: flex;
-  overflow-x: auto;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .list-tab-item {
-  flex-shrink: 0;
-  width: 100px;
-  padding: 0 25px;
-  text-overflow: normal;
-  margin-right: 5px;
-  border: solid 1px #242f9b;
-  justify-content: center;
-  align-items: center;
+  padding: 10px 20px;
+  margin: 0 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #f8f8f8;
+  transition: background-color 0.2s;
 }
 
-.active {
-  background-color: #242f9b;
-  color: #ffffff;
+.list-tab-item.active {
+  background-color: #007bff;
+  color: white;
 }
+
+.list-tab-item:focus {
+  outline: 2px solid #007bff;
+  outline-offset: 2px;
+}
+
 
 .tasks {
   margin-top: 25px;
