--- a/src/pages/newList.scss
+++ b/src/pages/newList.scss
@@ -3,6 +3,15 @@
 .new-list {
   width: 1000px;
   margin: 0 auto;
+
+  @media (max-width: 768px) {
+    width: 90%;
+  }
+
+  @media (max-width: 320px) {
+    width: 100%;
+    padding: 10px;
+  }
 }
 
 .new-list-form {
@@ -12,6 +21,10 @@
 .new-list-title {
   width: 300px;
   margin-bottom: 25px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .new-list-button {
@@ -20,4 +33,16 @@
   width: 80px;
   height: 40px;
   border-radius: 5px;
+
+  @media (max-width: 768px) {
+    width: 70px;
+    height: 35px;
+    font-size: 14px;
+  }
+
+  @media (max-width: 320px) {
+    width: 60px;
+    height: 30px;
+    font-size: 12px;
+  }
 }
