作業06をさらに修正8

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -89,7 +89,7 @@ body {
   }
 
   .task-item {
-    padding: 8px;
+    padding: 16px;
   }
 
   .list-tab-item {
@@ -103,6 +103,9 @@ body {
     font-size: 18px;
   }
 
+  .tasks-header h2 {
+    font-size: 18px;
+  }
   .taskList {
     padding: 10px;
   }
